Bug 14590 - When usershares are enabled requesting an unknown share causes misleading log entries.
Summary: When usershares are enabled requesting an unknown share causes misleading log...
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: 4.12.2
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-12-03 22:31 UTC by Jeremy Allison
Modified: 2021-01-14 08:34 UTC (History)
2 users (show)

See Also:


Attachments
git-am fix for 4.12.next, 4.13.next. (1.74 KB, patch)
2020-12-04 21:54 UTC, Jeremy Allison
rpenny: review+
abartlet: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jeremy Allison 2020-12-03 22:31:54 UTC
Have patch, need bug number.
Comment 1 Jeremy Allison 2020-12-04 18:27:29 UTC
MR: https://gitlab.com/samba-team/samba/-/merge_requests/1715

Rowland, can you +1 please and I'll get this into a release. Thanks !
Comment 2 Rowland Penny 2020-12-04 18:30:17 UTC
(In reply to Jeremy Allison from comment #1)
Done
Comment 3 Samba QA Contact 2020-12-04 20:55:14 UTC
This bug was referenced in samba master:

8a0a7359faba642baf55a8f98ff78c0d0884d0f0
Comment 4 Jeremy Allison 2020-12-04 21:54:55 UTC
Created attachment 16359 [details]
git-am fix for 4.12.next, 4.13.next.

Cherry-pick from master back port for 4.12.next, 4.13.next.
Comment 5 Andrew Bartlett 2020-12-04 22:41:03 UTC
Assigning to Karolin for 4.12 and 4.13
Comment 6 Karolin Seeger 2020-12-08 09:21:13 UTC
(In reply to Andrew Bartlett from comment #5)
Pushed to autobuild-v4-{13,12}-test.
Comment 7 Samba QA Contact 2020-12-08 10:22:12 UTC
This bug was referenced in samba v4-13-test:

54d3d3cbf49b660f7e93aa45caa94fa6821c0999
Comment 8 Samba QA Contact 2020-12-09 11:46:12 UTC
This bug was referenced in samba v4-12-test:

a30aaa499db06023e11aa35cf66b105d1a5b56e4
Comment 9 Karolin Seeger 2020-12-09 13:17:12 UTC
Pushed to both branches.
Closing out bug report.

Thanks!
Comment 10 Samba QA Contact 2020-12-16 12:22:50 UTC
This bug was referenced in samba v4-13-stable (Release samba-4.13.3):

54d3d3cbf49b660f7e93aa45caa94fa6821c0999
Comment 11 Samba QA Contact 2021-01-14 08:34:27 UTC
This bug was referenced in samba v4-12-stable (Release samba-4.12.11):

a30aaa499db06023e11aa35cf66b105d1a5b56e4